# vox

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONSTITUTION.md  Makefile  README.md  build_exe.py  claude.md  coverage.xml  main.py  pyproject.toml  pytest.ini  test_pygame_mixer.py
.examples/: README.md
.examples/sessions/: example-article.json  technical-doc.json
.github/workflows/: ci.yml  release.yml  tests.yml  version-bump.yml
docs/: BUILD.md
scripts/: build_exe.py
specs/001-web-reader-ai/: constitution.md  plan.md  spec.md  tasks.md
specs/001-web-reader-ai/checklists/: requirements.md
specs/002-playback-session-improvements/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-playback-session-improvements/checklists/: requirements.md
specs/002-playback-session-improvements/contracts/: chunk-synthesizer.md  playback-controller.md  session-manager.md
specs/003-speech-to-text/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-speech-to-text/checklists/: requirements.md
specs/003-speech-to-text/contracts/: rebranding.md  stt-cli.md
specs/004-hotkey-voice-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-hotkey-voice-input/checklists/: requirements.md
specs/004-hotkey-voice-input/contracts/: api.md
specs/006-fluent-ui-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fluent-ui-redesign/checklists/: requirements.md
specs/006-fluent-ui-redesign/contracts/: ui-components.md
src/: __init__.py  config.py  main.py
src/browser/: __init__.py  accessibility.py  detector.py  tab_info.py
src/clipboard/: __init__.py  paster.py
src/extraction/: __init__.py  content_filter.py  dom_walker.py  file_loader.py  html_parser.py  text_extractor.py  url_fetcher.py
src/hotkey/: __init__.py  manager.py
src/persistence/: __init__.py  database.py  models.py
src/session/: __init__.py  manager.py  models.py
src/stt/: __init__.py  audio_utils.py  engine.py  recorder.py  transcriber.py  ui.py
src/tts/: __init__.py  chunking.py  controller.py  piper_provider.py  playback.py  synthesizer.py
src/ui/: __init__.py  indicator.py  main_window.py  styles.py  system_tray.py
src/ui/components/: __init__.py  base.py  card.py  empty_state.py  history_item.py  keycap.py  model_slider.py  speed_slider.py  theme_toggle.py
src/ui/mixins/: base_component.py
src/utils/: __init__.py  errors.py  logging.py  migration.py
src/voice_input/: __init__.py  controller.py
tests/: __init__.py
tests/integration/: test_app_lifecycle.py  test_chunked_playback.py  test_end_to_end.py  test_error_handling.py  test_playback_controls.py  test_session_workflow.py  test_tab_to_speech.py  test_url_to_speech.py  test_voice_input_flow.py
tests/unit/: test_browser_detector.py  test_chunking.py  test_cli_output.py  test_clipboard_paster.py  test_config.py  test_content_filter.py  test_database.py  test_errors.py  test_file_loader.py  test_history_ui.py  test_hotkey_manager.py  test_indicator.py  test_models.py  test_playback_controller.py  test_pygame_init.py  test_pygame_mixer.py  test_session_manager.py  test_settings_ui.py  test_text_extractor.py  test_tts_synthesizer.py  test_ui_components.py  test_ui_styles.py  test_url_fetcher.py  test_voice_controller.py
