[project]
name = "vox"
version = "3.2.0"
description = "Bidirectional audio-text conversion for Windows 11 - read web content aloud or transcribe your voice to text, completely offline"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Aidan"}]
license = {text = "MIT"}
keywords = ["text-to-speech", "speech-to-text", "whisper", "piper-tts", "accessibility", "voice-transcription", "audio-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "Pillow>=10.0.0",
    "NumPy>=1.24.0",
    "Pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.0.0",
    "piper-tts>=1.2.0",
    "pywinauto>=0.6.9",
    "black>=25.12.0",
    "pygame>=2.6.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    # 004-hotkey-voice-input: Desktop app dependencies
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "ttkbootstrap>=1.10.1",
    # 005-app-modernization: System tray support
    "pystray>=0.19.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "commitizen>=3.0.0",
    "pyinstaller>=6.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/AidanInceer/vox"
Repository = "https://github.com/AidanInceer/vox"
Documentation = "https://github.com/AidanInceer/vox/blob/main/README.md"
Issues = "https://github.com/AidanInceer/vox/issues"

[project.scripts]
vox = "src.main:main"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv/",
    "build/",
    "dist/",
    ".eggs/",
    "*.egg-info/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':'
    "F841",  # Local variable assigned but never used (intentional in tests with mocks)
    "C901",  # Complexity
    "W293",  # Blank line contains whitespace (intentional in test HTML strings)
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers --tb=short --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "contract: contract/API tests",
    "performance: performance and benchmark tests",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.browser", "src.extraction", "src.tts", "src.session", "src.utils"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.2.0"
version_provider = "pep621"
version_files = [
    "pyproject.toml:^version",
    "src/__init__.py:^__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
